--- a/src/main/resources/templates/Hall/example.html
+++ b/src/main/resources/templates/Hall/example.html
@@ -15,7 +15,7 @@
     <div class="row">
         <div class="col-5">
             <form method="POST">
-                <div class="row form-group">
+                <div class="row form-batch">
                     <div class="col-4 ">
                         <b><label for="hallNo">Hall Number</label></b>
 
@@ -25,7 +25,7 @@
 
                     </div>
                 </div>
-                <div class="row form-group">
+                <div class="row form-batch">
                     <div class="col-4 ">
                         <b><label for="condition">Hall Condition</label></b>
                     </div>
@@ -37,7 +37,7 @@
                         </select>
                     </div>
                 </div>
-                <div class="row form-group">
+                <div class="row form-batch">
                     <div class="col-4 ">
                         <b><label for="seatingCount">Seat Count</label></b>
                     </div>
@@ -45,7 +45,7 @@
                         <input type="text" class="form-control" placeholder="Enter Number of Seats" id="">
                     </div>
                 </div>
-                <div class="row form-group">
+                <div class="row form-batch">
                     <div class="col-4 ">
                         <b><label for="location">Hall Location</label></b>
                     </div>
@@ -61,7 +61,7 @@
 
                 </div>
 
-                <div class="row form-group">
+                <div class="row form-batch">
                     <div class="col-4 ">
 
                     </div>
