--- a/src/main/resources/templates/Hall/hall-detail.html
+++ b/src/main/resources/templates/Hall/hall-detail.html
@@ -27,12 +27,12 @@
 <!--Hall detail-->
 <div class="container-fluid" data-th-fragment="hallDetail">
     <!--hall id-->
-    <div class="form-group">
+    <div class="form-batch">
         <label data-th-for="${id}">Id</label>
         <p class="form-control" data-th-text="${hallDetail.id}"></p>
     </div>
     <!--number-->
-    <div class="form-group">
+    <div class="form-batch">
         <label data-th-for="${number}"></label>
         <p class="form-control" data-th-text="${hallDetail.number}"></p>
     </div>
@@ -65,7 +65,7 @@
     </div>
 </div>
 <!--Button-->
-<div class="form-group col-md-12 col-sm-12 text-center flex-column ">
+<div class="form-batch col-md-12 col-sm-12 text-center flex-column ">
     <a href="/hall">
         <button class="btn btn-success" tabindex="21" type="submit">
             Back
