--- a/src/main/resources/templates/batch/classManagement.html
+++ b/src/main/resources/templates/batch/classManagement.html
@@ -28,7 +28,7 @@
             <form method="post">
 
 
-                <div class="row form-group">
+                <div class="row form-batch">
                     <div class="col-4 ">
                         <b><label for="sessionRef">Class Reference</label></b>
                     </div>
@@ -36,7 +36,7 @@
                         <input type="text" class="form-control" placeholder="Enter Reference" id="">
                     </div>
                 </div>
-                <div class="row form-group">
+                <div class="row form-batch">
                     <div class="col-4 ">
                         <b><label for="Name">Year & Grade</label></b>
                     </div>
@@ -71,7 +71,7 @@
 
 
 
-                <div class="row form-group">
+                <div class="row form-batch">
                     <div class="col-4 ">
                         <b><label for="subjectName">Subject Name</label></b>
                     </div>
@@ -79,7 +79,7 @@
                         <input type="text" class="form-control" placeholder="Enter Subject Name" id="">
                     </div>
                 </div>
-                <div class="row form-group">
+                <div class="row form-batch">
                     <div class="col-4 ">
                         <b><label for="teacherName">Teacher Name</label></b>
                     </div>
@@ -87,7 +87,7 @@
                         <input type="text" class="form-control" placeholder="Enter Teacher Name" id="">
                     </div>
                 </div>
-<!--                <div class="row form-group">
+<!--                <div class="row form-batch">
                     <div class="col-4 ">
                         <b><label for="hallNo">Hall Number</label></b>
                     </div>
@@ -95,7 +95,7 @@
                         <input type="text" class="form-control" placeholder="Enter Hall Number" id="">
                     </div>
                 </div>-->
-                <div class="row form-group">
+                <div class="row form-batch">
                     <div class="col-4 ">
 
                     </div>
