--- a/src/main/resources/templates/emailMessage/emailMessage-detail.html
+++ b/src/main/resources/templates/emailMessage/emailMessage-detail.html
@@ -35,7 +35,7 @@
     <div class="col-sm-12 flex-column ">
         <div class="row">
             <!--Left Side-->
-            <div class="form-group col-md-6 col-sm-6 text-left flex-column">
+            <div class="form-batch col-md-6 col-sm-6 text-left flex-column">
                 <div class="form-row text-right">
                     <div class="col-md-4">
                         <label class="control-label" for="subject">Subject :</label>
@@ -54,7 +54,7 @@
                 </div>
             </div>
             <!--Right Side-->
-            <div class="form-group col-md-6 col-sm-6 text-right flex-column">
+            <div class="form-batch col-md-6 col-sm-6 text-right flex-column">
                 <div class="form-row text-right">
                     <div class="col-md-4">
                         <label class="control-label" for="createdAt">Send At :</label>
@@ -108,7 +108,7 @@
         </div>
     </div>
     <br>
-    <div class="form-group col-md-12 col-sm-12 text-center flex-column ">
+    <div class="form-batch col-md-12 col-sm-12 text-center flex-column ">
         <a href="/emailMessage">
             <button class="btn btn-success" type="button" tabindex="10">
                 <i class="fa fa-backward " style="font-size: 20px"></i>&nbsp; &nbsp;Back
