--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -31,6 +31,12 @@
     <link th:href="@{/css/image-uploader.min.css}" media="all" rel="stylesheet" type="text/css"/>
     <!--Floating Label-->
     <link th:href="@{/css/floating-labels.css}" media="all" rel="stylesheet" type="text/css"/>
+    <!--style for main window-->
+    <link th:href="@{/css/stylemainwindow.css}" media="all" rel="stylesheet" type="text/css"/>
+    <!--Animations-->
+    <link th:href="@{/css/animate.css}" media="all" rel="stylesheet" type="text/css"/>
+
+    <link th:href="@{/css/cards.css}" media="all" rel="stylesheet" type="text/css"/>
 </head>
 <body>
 
