--- a/src/main/resources/templates/login/login.html
+++ b/src/main/resources/templates/login/login.html
@@ -30,13 +30,13 @@
                     <a class="nav-link active btn btn-outline-primary" data-toggle="tab" href="#home" >Home</a><br><p></p>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link list-group-item list-group-item-primary" data-toggle="tab" href="#menu1">Login as a Staff</a><p></p>
+                    <a class="nav-link list-batch-item list-batch-item-primary" data-toggle="tab" href="#menu1">Login as a Staff</a><p></p>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link list-group-item list-group-item-primary" data-toggle="tab" href="#menu2">Login as a Teacher</a><p></p>
+                    <a class="nav-link list-batch-item list-batch-item-primary" data-toggle="tab" href="#menu2">Login as a Teacher</a><p></p>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link list-group-item list-group-item-primary" data-toggle="tab" href="#menu3">Login as a Admin</a><p></p>
+                    <a class="nav-link list-batch-item list-batch-item-primary" data-toggle="tab" href="#menu3">Login as a Admin</a><p></p>
                 </li>
             </ul>
 
@@ -67,7 +67,7 @@
 <form method="post">
                                     <!-- Modal body -->
                                     <div class="modal-body">
-                                        <div class="row form-group">
+                                        <div class="row form-batch">
                                             <div class="col-4 ">
                                                 <b><label for="empId">Employee ID</label></b>
 
@@ -77,7 +77,7 @@
 
                                             </div>
                                         </div>
-                                        <div class="row form-group">
+                                        <div class="row form-batch">
                                             <div class="col-4 ">
                                                 <b><label for="password">Password</label></b>
 
@@ -112,7 +112,7 @@
                                 <form method="post">
                                     <!-- Modal body -->
                                     <div class="modal-body">
-                                        <div class="row form-group">
+                                        <div class="row form-batch">
                                             <div class="col-4 ">
                                                 <b><label for="regNo">Registration ID</label></b>
 
@@ -122,7 +122,7 @@
 
                                             </div>
                                         </div>
-                                        <div class="row form-group">
+                                        <div class="row form-batch">
                                             <div class="col-4 ">
                                                 <b><label for="password">Password</label></b>
 
@@ -156,7 +156,7 @@
                                 <form method="post">
                                     <!-- Modal body -->
                                     <div class="modal-body">
-                                        <div class="row form-group">
+                                        <div class="row form-batch">
                                             <div class="col-4 ">
                                                 <b><label for="userId">User ID</label></b>
 
@@ -166,7 +166,7 @@
 
                                             </div>
                                         </div>
-                                        <div class="row form-group">
+                                        <div class="row form-batch">
                                             <div class="col-4 ">
                                                 <b><label for="password">Password</label></b>
 
