--- a/src/main/resources/templates/subject/subjectManagement.html
+++ b/src/main/resources/templates/subject/subjectManagement.html
@@ -28,7 +28,7 @@
             <form method="post">
 
 
-            <div class="row form-group">
+            <div class="row form-batch">
                 <div class="col-4 ">
                     <b><label for="subjectCode">Subject Code</label></b>
                 </div>
@@ -36,7 +36,7 @@
                     <input type="text" class="form-control" placeholder="Enter Subject Code" id="">
                 </div>
             </div>
-            <div class="row form-group">
+            <div class="row form-batch">
                 <div class="col-4 ">
                     <b><label for="subjectName">Subject Name</label></b>
                 </div>
@@ -44,7 +44,7 @@
                     <input type="text" class="form-control" placeholder="Enter Subject Name" id="">
                 </div>
             </div>
-                <div class="row form-group">
+                <div class="row form-batch">
                     <div class="col-4 ">
 
                     </div>
