--- a/src/main/resources/templates/Hall/hallUpdate.html
+++ b/src/main/resources/templates/Hall/hallUpdate.html
@@ -26,7 +26,7 @@
     <div class="row">
         <div class="col-5">
             <form method="POST">
-                <div class="row form-group">
+                <div class="row form-batch">
                     <div class="col-4 ">
                         <b><label for="hallNo">Hall Number</label></b>
 
@@ -36,7 +36,7 @@
 
                     </div>
                 </div>
-                <div class="row form-group">
+                <div class="row form-batch">
                     <div class="col-4 ">
                         <b><label for="condition">Hall Condition</label></b>
                     </div>
@@ -48,7 +48,7 @@
                         </select>
                     </div>
                 </div>
-                <div class="row form-group">
+                <div class="row form-batch">
                     <div class="col-4 ">
                         <b><label for="seatingCount">Seat Count</label></b>
                     </div>
@@ -56,7 +56,7 @@
                         <input type="text" class="form-control" placeholder="Enter Number of Seats" id="">
                     </div>
                 </div>
-                <div class="row form-group">
+                <div class="row form-batch">
                     <div class="col-4 ">
                         <b><label for="location">Hall Location</label></b>
                     </div>
@@ -72,7 +72,7 @@
 
                 </div>
 
-                <div class="row form-group">
+                <div class="row form-batch">
                     <div class="col-4 ">
 
                     </div>
