--- a/src/main/resources/templates/emailMessage/addEmailMessage.html
+++ b/src/main/resources/templates/emailMessage/addEmailMessage.html
@@ -34,7 +34,7 @@
         <form id="form" th:action="${'/emailMessage/add'}" th:object="${emailMessage}" class="form-horizontal" method="POST">
             <div class="container-fluid">
                 <!--Left Side-->
-                <div class="form-group text-left flex-column">
+                <div class="form-batch text-left flex-column">
                     <!--Subject-->
                         <div class="col-md-4">
                             <label class="control-label" for="subject">Subject :</label>
@@ -45,12 +45,12 @@
                 </div>
             </div>
             <!--employee find to add-->
-            <div class="form-group col-12 col-md-12 col-sm-12 formBorder" id="teamFindShow">
+            <div class="form-batch col-12 col-md-12 col-sm-12 formBorder" id="teamFindShow">
                 <div class="row col-12 col-md-12 col-sm-12 text-left">
                     <h3 class="text-md-left "><strong>Add Employee :- </strong></h3>
                 </div>
                 <!--Working Place to select Employee -->
-                <div class="form-group col-12 col-md-12 col-sm-12 formBorder" id="employeeFind">
+                <div class="form-batch col-12 col-md-12 col-sm-12 formBorder" id="employeeFind">
                     <div class="form-row">
                         <!--province-->
                         <div class="col-md-3 col-sm-3 text-left ">
@@ -106,8 +106,8 @@
                 </div>
             </div>
             <!--Employee show-->
-            <div class="form-group col-12 col-sm-12 col-md-12 formBorder" id="employeeShow">
-                <div class="form-group col-12 col-sm-12 col-md-12 formBorder">
+            <div class="form-batch col-12 col-sm-12 col-md-12 formBorder" id="employeeShow">
+                <div class="form-batch col-12 col-sm-12 col-md-12 formBorder">
                     <div class="form-row">
                         <!--Left side-->
                         <div class="col-sm-6 col-md-6 text-left flex-column">
@@ -148,7 +148,7 @@
                     </div>
                 </div>
             </div>
-            <div class="form-group col-md-12 col-sm-12 text-left flex-column ">
+            <div class="form-batch col-md-12 col-sm-12 text-left flex-column ">
                 <label class="control-label" for="messageOne">Message:</label>
                 <div class="container-fluid">
                     <div>
@@ -182,7 +182,7 @@
                 </div>
             </div>
             <!--button-->
-            <div class="form-group col-md-12 col-sm-12 text-center flex-column ">
+            <div class="form-batch col-md-12 col-sm-12 text-center flex-column ">
                 <div class="input-field">
                     <button class="btn btn-success" type="submit" tabindex="10">
                         <i class="fas fa-paper-plane" style="font-size: 20px"></i>&nbsp; &nbsp;<span
