--- a/src/main/resources/templates/role/addRole.html
+++ b/src/main/resources/templates/role/addRole.html
@@ -32,7 +32,7 @@
     <div class="col-sm-12 flex-column ">
         <form id="form" class="form-horizontal" method="POST" th:action="${addStatus==true?'/role/add':'/role/update'}"
               th:object="${role}">
-            <div class="form-group col-md-12 col-sm-12 text-center flex-column">
+            <div class="form-batch col-md-12 col-sm-12 text-center flex-column">
                 <div class="col-sm-6 col-md-6 offset-2">
                     <div id="idHide" th:if="${addStatus==false}" class="form-row text-right">
                         <div class="col-md-4">
@@ -53,7 +53,7 @@
                     </div>
                 </div>
             </div>
-            <div class="form-group col-md-12 col-sm-12 text-center flex-column">
+            <div class="form-batch col-md-12 col-sm-12 text-center flex-column">
                 <button class="btn btn-success" type="submit">
                     <i class="fa fa-save" style="font-size: 20px"></i>&nbsp; &nbsp;<span
                         id="submit" th:text="${addStatus==true?'Save': 'Update'}">                        </span>
