--- a/src/main/resources/templates/student/student-detail.html
+++ b/src/main/resources/templates/student/student-detail.html
@@ -27,12 +27,12 @@
 <!--Student detail-->
 <div class="container-fluid" data-th-fragment="studentDetail">
     <!--student id-->
-    <div class="form-group">
+    <div class="form-batch">
         <label data-th-for="${id}">Id</label>
         <p class="form-control" data-th-text="${studentDetail.id}"></p>
     </div>
     <!--registration number-->
-    <div class="form-group">
+    <div class="form-batch">
         <label data-th-for="${regNo}">Registration ID</label>
         <p class="form-control" data-th-text="${studentDetail.regNo}"></p>
     </div>
@@ -133,7 +133,7 @@
 
 </div>
 <!--Button-->
-<div class="form-group col-md-12 col-sm-12 text-center flex-column ">
+<div class="form-batch col-md-12 col-sm-12 text-center flex-column ">
     <a href="/student">
         <button class="btn btn-success" tabindex="21" type="submit">
             Back
