--- a/src/main/resources/templates/teacher/addTeacher.html
+++ b/src/main/resources/templates/teacher/addTeacher.html
@@ -152,7 +152,7 @@
         </div>
 
         <!--Button-->
-        <div class="form-group col-md-12 col-sm-12 text-center flex-column ">
+        <div class="form-batch col-md-12 col-sm-12 text-center flex-column ">
             <button class="btn btn-success" tabindex="21" type="submit">
                 <i class="fa fa-save " style="font-size: 20px"></i>&nbsp; &nbsp;<span
                     data-th-text="${addStatus==true?'Save': 'Update'}"
