--- a/src/main/resources/templates/teacher/teacher-detail.html
+++ b/src/main/resources/templates/teacher/teacher-detail.html
@@ -27,12 +27,12 @@
 <!--Teacher detail-->
 <div class="container-fluid" data-th-fragment="teacherDetail">
     <!--teacher id-->
-    <div class="form-group">
+    <div class="form-batch">
         <label data-th-for="${id}">Id</label>
         <p class="form-control" data-th-text="${teacherDetail.id}"></p>
     </div>
     <!--registration number-->
-    <div class="form-group">
+    <div class="form-batch">
         <label data-th-for="${registrationId}"></label>
         <p class="form-control" data-th-text="${teacherDetail.registrationId}"></p>
     </div>
@@ -119,7 +119,7 @@
     </div>
 </div>
 <!--Button-->
-<div class="form-group col-md-12 col-sm-12 text-center flex-column ">
+<div class="form-batch col-md-12 col-sm-12 text-center flex-column ">
     <a href="/teacher">
         <button class="btn btn-success" tabindex="21" type="submit">
             Back
