--- a/src/main/resources/templates/timetable/timetableManagement.html
+++ b/src/main/resources/templates/timetable/timetableManagement.html
@@ -28,7 +28,7 @@
             <form method="post">
 
 
-                <div class="row form-group">
+                <div class="row form-batch">
                     <div class="col-4 ">
                         <b><label for="sessionRef">Session Reference</label></b>
                     </div>
@@ -36,7 +36,7 @@
                         <input type="text" class="form-control" placeholder="Enter Session Reference" id="">
                     </div>
                 </div>
-                <div class="row form-group">
+                <div class="row form-batch">
                     <div class="col-4 ">
                         <b><label for="assignDate">Assigning Date</label></b>
                     </div>
@@ -44,7 +44,7 @@
                         <input type="date" class="form-control" id="example-date-input">
                     </div>
                 </div>
-                <div class="row form-group">
+                <div class="row form-batch">
                     <div class="col-4 ">
 
                     </div>
