--- a/src/main/resources/templates/user/user-detail.html
+++ b/src/main/resources/templates/user/user-detail.html
@@ -33,7 +33,7 @@
 <div class="container-fluid bg-dark formBorder">
     <div class="row">
         <!--Left Side-->
-        <div class="form-group col-md-6 col-sm-6 text-left flex-column">
+        <div class="form-batch col-md-6 col-sm-6 text-left flex-column">
             <div class="form-row">
                 <!--id-->
                 <div class="col-md-4">
@@ -54,7 +54,7 @@
             </div>
         </div>
         <!--Right Side-->
-        <div class="form-group col-md-6 col-sm-6 text-left flex-column">
+        <div class="form-batch col-md-6 col-sm-6 text-left flex-column">
             <!--Employee Details-->
             <div class="form-row">
                 <div class="col-md-4">
