--- a/src/main/resources/static/css/myCss.css
+++ b/src/main/resources/static/css/myCss.css
@@ -21,7 +21,7 @@ body {
 
 #loginback{
 
-    background-image: url(../img/1.jpg);
+    background-image: url(../img/loginBackground.png);
     -webkit-background-size:cover;
     background-size: cover;
     background-position:center center;
